--- a/docker-compose-azure.yml
+++ b/docker-compose-azure.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   limesurvey:
-    image: acspri/limesurvey
+    image: adamzammit/limesurvey
     volumes:
      - ${WEBAPP_STORAGE_HOME}/site/plugins:/var/www/html/plugins
      - ${WEBAPP_STORAGE_HOME}/site/upload:/var/www/html/upload
