--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -3,7 +3,7 @@ version: '2'
 services:
 
   limesurvey:
-    image: acspri/limesurvey:LIME_VER-lts
+    image: adamzammit/limesurvey:LIME_VER-lts
     build: .
     ports:
       - 8082:80
