--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - ./sessions:/var/lime/sessions
 
   mysql:
-    image: mariadb:10.5
+    image: registry.acspri.org.au/mariadb:10.5
     environment:
       MYSQL_ROOT_PASSWORD: e/xa|m|ple
     volumes:
