Update for pushing to ECR

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -87,6 +87,7 @@ VOLUME ["/var/lime/sessions"]
 VOLUME ["/var/www/html/application/config"]
 
 
+COPY global-bundle.pem /var/www/html/
 COPY docker-entrypoint.sh /usr/local/bin/
 RUN ln -s usr/local/bin/docker-entrypoint.sh /entrypoint.sh # backwards compat
 
