--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services: 
 
   limesurvey:
-    image: adamzammit/limesurvey:6.16.4
+    image: adamzammit/limesurvey:7.0.0-beta1
     ports:
       - 127.0.0.1:8082:80
     environment:
